@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Tue, Aug 4, 2009
 ---------------------------------------------------------------------
 - Upgraded [acts_as_commentable] plugin for Ruby 1.9 compatibility.
+- Updated tab settings to allow Fat Free CRM to run from a subdirectory (thanks, okyada!).
 
 Mon, Aug 3, 2009
 ---------------------------------------------------------------------
